# Projetos-Individuais-2026-1

./: .gitignore  LICENSE  README.md
.github/: pull_request_template.md
breno-lima/: .gitignore  documento-engenharia.md  index.py  requirements.txt
ingrid-soares/: README.md
joao-filipe-souza/: .env  agente.ipynb  comentarios.json  (+3 more)
lucas-guimaraes-borges/projeto-1/: documento-engenharia.md  pyproject.toml  relatorio-entrega.md
lucas-guimaraes-borges/projeto-1/src/: scraper.py
lucas-guimaraes-borges/projeto-1/src/agent/: __init__.py  chat_models.py  memory.py  runner.py
lucas-guimaraes-borges/projeto-1/src/agent/prompts/: event_agent_system.md
projeto-individual-2/felipe-amorim-de-araujo/: .gitignore  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
projeto-individual-2/felipe-amorim-de-araujo/data/finetune/: annotations.json
projeto-individual-2/felipe-amorim-de-araujo/docs/: relatorio-entrega.md
projeto-individual-2/felipe-amorim-de-araujo/src/: finetune_pipeline.py  inference.py  pipeline.py
projeto-individual-2/felipe-amorim-de-araujo/src/data/: annotate.py  dataset.py  ingest.py  preprocess.py
projeto-individual-2/felipe-amorim-de-araujo/src/model/: detector.py  guardrails.py  pyfunc_model.py  train.py
projeto-individual-2/felipe-amorim-de-araujo/tests/: test_finetune_pipeline.py  test_pipeline.py
projeto-individual-2/felipe-amorim-de-araujo/tests/data/: test_annotate.py  test_dataset.py  test_ingest.py  test_preprocess.py
projeto-individual-2/felipe-amorim-de-araujo/tests/model/: test_detector.py  test_guardrails.py
(+675 files in other folders)
